# bookstore-rocket

./: .env  Cargo.toml  Makefile.toml
migrations/2021-04-17-143228_bookstore/: down.sql  up.sql
resources/: bookstore.db
src/: cors.rs  handler.rs  main.rs  router.rs
src/auth/: mod.rs
src/db/: mod.rs  models.rs  pool.rs  schema.rs
src/handler/: books.rs  carousels.rs  cart.rs  mod.rs  users.rs
