[package]
name = "bookstore-rocket"
version = "0.1.0"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["sqlite"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.14"
rocket = "0.4.7"
rocket_codegen = "0.4.7"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
